fixed some css spacing

--- a/App/assets/css/styles.css
+++ b/App/assets/css/styles.css
@@ -190,7 +190,7 @@ body {
   .leadpages-edit-body .leadpage_slug_container {
     padding-left: 0px !important; }
   .leadpages-edit-body .leadbox_slug {
-    margin-top: 35px; }
+    margin-top: 30px; }
     .leadpages-edit-body .leadbox_slug .lp_site_main_url {
       display: inline-block;
       height: 36px;
