--- a/App/assets/sass/leadpages_post_type.scss
+++ b/App/assets/sass/leadpages_post_type.scss
@@ -157,7 +157,7 @@ body{
     padding-left:0px !important;
   }
   .leadbox_slug{
-    margin-top:35px;
+    margin-top:30px;
     .lp_site_main_url{
       display: inline-block;
       height:36px;
